Intial layout is implemented..
I think i have to change listView into some other view like table layout
Signed-off-by: Taeksang Kim <voidbag@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Your Stock</string>
+    <string name="h_name">Name</string>
+    <string name="h_price">Price</string>
+    <string name="h_min_price">Min Price</string>
+    <string name="h_max_price">Max Price</string>
 </resources>
