--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="h_price">Price</string>
     <string name="h_min_price">Min Price</string>
     <string name="h_max_price">Max Price</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+
+    <string-array name="menu_array">
+        <item>Search</item>
+        <item>PushSetting</item>
+    </string-array>
 </resources>
