Dummpy Popup and Socket.io lib are added.
Signed-off-by: Taeksang Kim <Taeksang Kim>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="h_max_price">Max Price</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
+    <string name="dialog_ok">OK</string>
+    <string name="dialog_cancel">Cancel</string>
 
     <string-array name="menu_array">
         <item>Search</item>
