--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,24 @@
     <string name="drawer_close">Close navigation drawer</string>
     <string name="dialog_ok">OK</string>
     <string name="dialog_cancel">Cancel</string>
+    <string name="duration">Duration</string>
+    <string name="toggle_min">Min</string>
+    <string name="toggle_max">Max</string>
 
     <string-array name="menu_array">
         <item>Search</item>
         <item>PushSetting</item>
     </string-array>
+    <string-array name="duration">
+        <item>A week ago</item>
+        <item>2 weeks ago</item>
+        <item>A month</item>
+        <item>2 months</item>
+        <item>A year</item>
+        <item>2 years</item>
+        <item>3 years</item>
+        <item>5 years</item>
+
+    </string-array>
+
 </resources>
