--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -12,7 +12,7 @@
     <string name="push_setting">푸시 설정</string>
     <string name="toggle_min">최저: &#160;▼</string>
     <string name="toggle_max">최고: &#160;▲</string>
-
+    <string name="push_complete">푸시 설정이 완료 되었습니다!</string>
     <string-array name="menu_array">
         <item>전 종목</item>
         <item>검색</item>
