--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="push_setting">Push Setting</string>
     <string name="toggle_min">Min: &#160;▼</string>
     <string name="toggle_max">Max: &#160;▲</string>
+    <string name="push_complete">Push setting completed!</string>
 
     <string-array name="menu_array">
         <item>Entire List</item>
